# yquake2

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE_CONVENTIONS.md  CLAUDE_CONVERTER.md  CLAUDE_MCP.md  CLAUDE_ROBLOX_IMPORT.md  CLAUDE_STATUS.md  CMakeLists.txt
mcp/: probe_roblox.py
mcp/q2_bridge/: README.md  pyproject.toml
mcp/q2_bridge/q2_bridge/: __init__.py  server.py
src/client/: cl_main.c  mcp_client.c
src/client/refresh/gl1/: gl1_main.c  gl1_misc.c
src/client/refresh/gl1/header/: local.h
src/client/vid/header/: ref.h
src/common/: clientserver.c  frame.c  mcp_json.c  mcp_server.c
src/common/header/: mcp_json.h  mcp_server.h
src/game/: g_cmds.c
tools/bsp2rbx/: CMakeLists.txt
tools/bsp2rbx/include/bsp2rbx/: BrushGeometry.cpp  BrushGeometry.h  Bsp.h  BspConverter.cpp  BspConverter.h  BspParser.cpp  BspParser.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  IBrushFilter.h  IBrushGeometry.h  IBspParser.h  IFileReader.h  IFileWriter.h  IRobloxXmlWriter.h  IWorldspawnBrushSet.h  RobloxXmlWriter.cpp  RobloxXmlWriter.h  SolidWorldspawnFilter.cpp  SolidWorldspawnFilter.h  WorldspawnBrushSet.cpp  WorldspawnBrushSet.h
tools/bsp2rbx/scripts/: rbxlx_to_luau_chunks.py
tools/bsp2rbx/src/: main.cpp
tools/bsp2rbx/tests/: BrushGeometryTest.cpp  BspConverterTest.cpp  BspParserTest.cpp  FileReaderTest.cpp  FileWriterTest.cpp  RobloxXmlWriterTest.cpp  SolidWorldspawnFilterTest.cpp  WorldspawnBrushSetTest.cpp
tools/bsp2rbx/tests/e2e/: Demo1ConversionTest.cpp
tools/bsp2rbx/tests/mocks/: MockBrushFilter.h  MockBrushGeometry.h  MockBspParser.h  MockFileReader.h  MockFileWriter.h  MockRobloxXmlWriter.h  MockWorldspawnBrushSet.h
tools/bsp2rbx/tools/: brush_at.cpp  brush_stats.cpp
