[project]
name = "q2-bridge"
version = "0.1.0"
description = "MCP stdio bridge that forwards tool calls to a running yquake2 instance over TCP."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
q2-bridge = "q2_bridge.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_bridge*"]
